--- a/index.html
+++ b/index.html
@@ -52,12 +52,15 @@
                           
                           <form id="producto-formulario" class="target-body">
                               <div class="form-group" style="margin-top: 10px;"> 
+                                <label for="exampleInputEmail1" class="form-label mt-4">Nombre del producto</label>
                                   <input type="text" id="nombre" placeholder="Nombre del Producto" class="form-control">
                               </div>
-                              <div class="form-group" style="margin-top: 20px;"> 
+                              <div class="form-group" style="margin-top: 20px;">
+                                <label for="exampleInputEmail1" class="form-label mt-4">Precio del producto</label>
                                 <input type="number" id="precio" step="0.01" placeholder="Precio del Producto" class="form-control">
                             </div>
-                            <div class="form-group" style="margin-top: 30px;"> 
+                            <div class="form-group" style="margin-top: 30px;">
+                              <label for="exampleInputEmail1" class="form-label mt-4">Año del producto</label>
                                 <input type="number" id="año" step="1" value="2022" class="form-control">
                             </div>
 
