--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--Bootswatch-->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <!--style para footer-->
+    <link rel="stylesheet" href="./css/style.css">
     <!--favicon-->
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,7 +34,7 @@
                 <a class="nav-link" href="#">Productos APP</a>
               </li>
             </ul>
-            <form class="d-flex">
+            <form class="d-flex" >
               <input class="form-control me-sm-2" type="text" placeholder="Buscar">
               <button class="btn btn-secondary my-2 my-sm-0" type="submit">Buscar</button>
             </form>
@@ -50,7 +52,7 @@
                       <div class="target-header">
                           <div style="margin-top: 20px; color: white;"><h4>Agregar Productos</h4></div>
                           
-                          <form id="producto-formulario" class="target-body">
+                          <form id="formulario-producto" class="target-body">
                               <div class="form-group" style="margin-top: 10px;"> 
                                 <label for="exampleInputEmail1" class="form-label mt-4">Nombre del producto</label>
                                   <input type="text" id="nombre" placeholder="Nombre del Producto" class="form-control">
@@ -64,7 +66,7 @@
                                 <input type="number" id="año" step="1" value="2022" class="form-control">
                             </div>
 
-                            <button type="button" class="btn btn-dark" style="margin-top: 20px;">Guardar
+                            <button type="input" class="btn btn-primary" style="margin-top: 20px;">Guardar
                             </button>
                           </form>
                       </div>
@@ -77,10 +79,38 @@
                  </div>
             </div>
         </div>
-    </div>
+      </div>
+      <br>""
+      <br>""
+      <br>""
+      <br>""
+      <br>""
+      <br>""
+      <footer class="text-center footer-style">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 footer-col">
+                    <h3 style="color: white;">Clase</h3>
+                    <p>
+                        Clase 2  <br />
+                        crud con javascript
+                    </p>
+                </div>
+                <div class="col-md-4 footer-col">
+                    <h3 style="color: white;">JavaScript</h3>
+                    <div style="color: white; font-size: 10px;" class="container-fluid  text-center p-3">
+                      <p class="small">&copy: Todos los derechos reservados :<a style="color: white;" href="https://github.com/Andduck">AndDuck</a> - Guatemala 2022</p>
+                    </div>
+                </div>
+                <div class="col-md-4 footer-col">
+                    <h3 style="color: white;">Instituto</h3>
+                    <a style="color: white;" href="https://www.emilianisomascos.edu.gt/">Instituto Emiliani Somascos</a><p></p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
-    
-
+  
     <script src="./JS/App.js" type="module"></script>
 </body>
 </html>
